<resources>
    <string name="app_name">AttendanceFP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fatma Beyzanur Tolan</string>
    <string name="nav_header_subtitle">fatmabeyzanurtolan@posta.mu.edu.tr</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_contact_support">Contact Support</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>