<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.attendancefp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_attendanceFragment"
            app:destination="@id/attendanceFragment" />
        <action
            android:id="@+id/action_nav_home_to_lectureSchedule"
            app:destination="@id/lectureSchedule" />
    </fragment>

    <fragment
        android:id="@+id/attendanceFragment"
        android:name="com.example.attendancefp.ui.attendance.AttendanceFragment"
        android:label="fragment_attendance"
        tools:layout="@layout/fragment_attendance" />
    <fragment
        android:id="@+id/lectureSchedule"
        android:name="com.example.attendancefp.ui.lectures.LectureSchedule"
        android:label="fragment_lecture_schedule"
        tools:layout="@layout/fragment_lecture_schedule" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.attendancefp.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.attendancefp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile" />
    <fragment
        android:id="@+id/nav_preferences"
        android:name="com.example.attendancefp.ui.Preferences.PreferencesFragment"
        android:label="@string/menu_preferences" />
    <fragment
        android:id="@+id/nav_contact_support"
        android:name="com.example.attendancefp.ui.ContactSupport.ContactSupportFragment"
        android:label="@string/menu_contact_support"
        tools:layout="@layout/fragment_contact_support" />
</navigation>